version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Selection/SelectionHelper.rst.txt
.. vale off



:class:`SelectionHelper`
========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Selection.SelectionHelper

   Bases: :py:obj:`object`





.. py:currentmodule:: SelectionHelper

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CastRayOnGeometry`
            - Finds geometry entities intersecting input BoundVector and returns them in list of GeometryRayCastHit.
          * - :py:attr:`~CreateVector3D`
            - Creates a Vector3D object based on the given selection and reverse flag.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.












Method detail
-------------
.. py:method:: CastRayOnGeometry(castVector: Ansys.Mechanical.Math.BoundVector, settings: Ansys.Mechanical.Selection.GeometryRayCastSettings) -> Iterable[Ansys.Mechanical.Selection.GeometryRayCastHit]
   :classmethod:


.. code-block:: text

   Finds geometry entities intersecting input BoundVector and returns them in list of GeometryRayCastHit.
   These are returned in the order they are hit, each item containing the entity and BoundVector normal to point hit.

..
       !! processed by numpydoc !!

.. py:method:: CreateVector3D(selection: Ansys.ACT.Interfaces.Common.ISelectionInfo, reversed: bool) -> Ansys.ACT.Math.Vector3D
   :classmethod:


.. code-block:: text

   Creates a Vector3D object based on the given selection and reverse flag.  
       The direction is computed as the outward normal of a planar face, the direction between 
       two nodes or vertices from the first to the second, or the axis of an edge.  
       The reversed flag will return the opposite of the computed direction.

..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on